fix(Modal): use overflow hidden on wrapper

--- a/src/components/Modal/index.css
+++ b/src/components/Modal/index.css
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  overflow: hidden;
   top: 0;
   right: 0;
   bottom: 0;
